<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnpgl"
        android:text="@string/tlp1" />

    <RadioGroup
        android:id="@+id/rg_bhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="270dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bhs1"
            android:id="@+id/btneng"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bhs2"
            android:id="@+id/btnina"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/imgholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_bhs"
        android:src="@drawable/coffe" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customer"
        android:text="@string/cust1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/imgholder"
        android:layout_marginTop="5px"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editcust"
        android:layout_below="@+id/customer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menukopi"
        android:text="@string/menu1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/editcust"
        android:layout_marginTop="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sajianteks"
        android:text="@string/jenis1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/editcust"
        android:layout_toRightOf="@+id/menukopi"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/npesan"
        android:text="@string/pesan1"
        android:layout_below="@id/editcust"
        android:layout_toRightOf="@+id/sajianteks"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="120sp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kopiarab"
        android:text="@string/kopi1"
        android:layout_below="@+id/menukopi"
        android:textSize="16sp"
        android:layout_marginTop="5sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_arab"
        android:orientation="horizontal"
        android:layout_below="@+id/sajianteks"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@+id/kopiarab"
        android:layout_marginLeft="40sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_warmarab"
            android:text="@string/h1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_icearab"
            android:text="@string/d1"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kopiamric"
        android:text="@string/kopi2"
        android:layout_below="@+id/kopiarab"
        android:textSize="16sp"
        android:layout_marginTop="5sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_amric"
        android:orientation="horizontal"
        android:layout_below="@+id/rg_arab"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@+id/kopiamric"
        android:layout_marginLeft="17sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_warmamric"
            android:text="@string/h1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_iceamric"
            android:text="@string/d1"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kopicap"
        android:text="@string/kopi3"
        android:layout_below="@+id/kopiamric"
        android:textSize="16sp"
        android:layout_marginTop="5sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_cap"
        android:orientation="horizontal"
        android:layout_below="@+id/rg_amric"
        android:layout_marginTop="5sp"
        android:layout_toRightOf="@+id/kopicap"
        android:layout_marginLeft="18sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_warmcap"
            android:text="@string/h1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_icecap"
            android:text="@string/d1"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/countarab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textSize="16sp"
        android:layout_below="@id/npesan"
        android:layout_toRightOf="@+id/kopiarab"
        android:layout_marginLeft="235sp"/>

    <EditText
        android:id="@+id/countamric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textSize="16sp"
        android:layout_below="@id/countarab"
        android:layout_toRightOf="@+id/kopiamric"
        android:layout_marginLeft="213sp"/>

    <EditText
        android:id="@+id/countcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textSize="16sp"
        android:layout_below="@id/countamric"
        android:layout_toRightOf="@+id/kopicap"
        android:layout_marginLeft="214sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kopicap"
        android:layout_marginTop="20sp"
        android:text="@string/total"
        android:id="@+id/totalname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalhold"
        android:layout_toRightOf="@id/totalname"
        android:layout_marginLeft="70sp"
        android:layout_marginTop="405sp"/>

    <Button
        android:id="@+id/btnhtg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bayarhold"
        android:text="@string/htg1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/byr1"
        android:layout_below="@id/totalname"
        android:id="@+id/bayarname"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalhold"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="10sp"
        android:id="@+id/bayarhold"
        android:hint="@string/byrh1" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="23sp"
        android:layout_below="@id/bayarname"
        android:text="@string/kmbl1"
        android:id="@+id/kmblname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayarhold"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="100sp"
        android:id="@+id/kmblhold" />-->

    <Button
        android:id="@+id/btnbyr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayarhold"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40sp"
        android:text="@string/fns1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayarhold"
        android:layout_toRightOf="@id/btnbyr"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="5sp"
        android:id="@+id/btnreset"
        android:text="@string/rst1"/>

</RelativeLayout>